--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master"
+    "deploy": "git push heroku master",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "env NODE_ENV=test npm run migrate"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +22,17 @@
     "helmet": "^3.21.2",
     "knex": "^0.20.9",
     "morgan": "^1.9.1",
-    "pg": "^7.18.1"
+    "pg": "^7.18.1",
+    "uuid": "^3.4.0",
+    "valid-url": "^1.0.9",
+    "winston": "^3.2.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^7.0.1",
     "nodemon": "^2.0.2",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
