--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "morgan": "^1.9.1",
     "pg": "^7.18.1",
     "postgrator-cli": "^3.3.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "valid-url": "^1.0.9",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
